<resources>
    <string name="app_name">Lab4G2</string>
    <string name="registrarse">Registrarse</string>
    <string name="iniciar_sesion">INICIAR SESION</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="escribir_usuario">Escribir usuario</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="correo">Correo</string>
    <string name="iniciar_sesion_btntext">Iniciar Sesion</string>
    <string name="textviewOpciones">TextView</string>
    <string name="respuesta">respuesta</string>
    <string name="pregunta">PREGUNTA</string>
    <string name="_12_10_2020">12/10/2020</string>
    <string name="_1">1</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="democracia_para_todos">DEMOCRACIA PARA TODOS</string>
    <string name="a_continuaci_n_ingrese_sus_datos_para_el_registro">A continuación, ingrese sus datos para el registro</string>
    <string name="iniciar_sesion21">Iniciar Sesion</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="contrase_a">Contraseña</string>
    <string name="correo_electr_nico2">Correo electrónico</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>

</resources>