<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BlankFragmentRegistro">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/idTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal"
        android:text="REGISTRO" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="387dp"
        android:gravity="center"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="31dp" />

        <TextView
            android:id="@+id/textUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usuario" />

        <EditText
            android:id="@+id/usarioTexto"
            android:layout_width="311dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/escribir_usuario"
            android:inputType="textPersonName"
            android:visibility="visible"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textCorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correo" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Escriba su correo"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contrase_a" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="316dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
             />

        <Space
            android:layout_width="match_parent"
            android:layout_height="31dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:text="Button" />

        <Space
            android:layout_width="396dp"
            android:layout_height="31dp" />

        <TextView
            android:id="@+id/inicioSesionID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iniciar_sesion_btntext" />

    </LinearLayout>

</FrameLayout>